syntax = "proto3";
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/iscollect/iscollect.proto

package grpc;
option go_package= "main/app/grpc/proto/iscollect";

service IsCollectService {
    rpc GetIsCollect (IsCollectRequest) returns (IsCollectResponse) {}
  }
  
  message IsCollectRequest {
      uint64 UserId = 1;
      uint64 EventId = 2;
  }
  
  message IsCollectResponse {
      bool IsCollect = 1;
  }